@@ -10,7 +10,7 @@ pipeline {
             steps {
                 withSonarQubeEnv('sonarqube'){
                     sh 'mvn clean install sonar:sonar -DskipTests=true -Dsonar.organization="myapp" -Dsonar.projectKey="myapp-" -Dsonar.projectName="myapp-"'
-                    sh '-illegal-access=warn'
+                    sh '--illegal-access=warn'
                 }
             }
         }
